end of course day commit

--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
       </div>
       <div class="input-number">
         <form action="number-of-questions">
-          <input class="input-box" type="integer" name="numberQuestions" placeholder="Input No. of Questions Desired">
+          <input class="js-input-box" type="integer" name="numberQuestions" placeholder="Input No. of Questions Desired">
+          <button class="start js-start" hidden>Start Now</button>
         </form>
       </div>
     </section>
-    <button class="start js-start">Start Now</button>
     </section>
     <section class="question js-question"></section>
     <section class="question-feedback js-question-feedback"></section>
